@@ -1,3 +1,8 @@
+2006-11-07  Marcus Meissner  <marcus@jet.franken.de>
+
+	* library.c: Do incremental event read only for
+	  actual PTP events.
+
 2006-11-04  Marcus Meissner  <marcus@jet.franken.de>
 	
 	* library.c: Added Canon Digital IXUS 850 IS
